--- a/lucas/1templates-L/login.html
+++ b/lucas/1templates-L/login.html
@@ -4,77 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/lucas/css/login.css">
     <title>login</title>
-    <style>
-body{
-    background-color: #ffffff;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}        
-header{
-    width: 100%;
-    height: 100%;
-    background-color: #8d50ff;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.cabecario{
-    display: flex;
-    align-items: center;
-}
-.texto-logo{
-    height: 100px;
-    margin: 5px 70px;
-    margin-top: 30px;
-}
-        .formlogin fieldset{
-            border-color: #e7e7e7;
-            width: 400px;
-            height: 110px;
-            margin-left: 35%;
-            margin-top:50px;
-            border-radius: 10px;
-        }
-        h1{
-            margin-top: 50px;
-            text-align: center;
-        }
-        #text{
-            width: 300px;
-            box-sizing: border-box;
-            padding: 10px;
-            font-size: 20px;
-            font-family: sans-serif;
-            border-radius: 10px;
-            border:1px solid;
-        }
-        .btm{
-            margin-top: 15px;
-            background-color:#dbff22;
-            border: 1px solid #dbff22;
-            color: #000000;
-            font-family:'Times New Roman', Times, serif;
-            padding:10px;
-            border-radius: 100px;
-            font-size: 15px;
-            cursor: pointer;
-        }
-
-        .fixarRodape {
-        bottom: 0;
-        position: fixed;
-        width: 100%;
-        text-align: center;
-        background: #8d50ff;
-        padding: 25px;
-        font-size: 12px;
-        color:#00ff43;
-        letter-spacing: 5px;
-        text-align: center;
-    }
-    </style>
 </head>
 <body>
     <header>
@@ -84,7 +15,7 @@ header{
             </div>
         </div>
     </header>    
-    <h1>Digite seu e-mail, telefone ou usuário do Mercado Digital</h1>
+    <h1>Digite seu e-mail, telefone ou usuário do Comércio Digital</h1>
     <form action="#" method="post" class="formlogin">
         <fieldset>
            <p>E-mail, Telefone ou Usuário</p>
@@ -93,7 +24,7 @@ header{
         </fieldset>
 </form>
     <footer class="fixarRodape">
-    copyright &copy; MercadoDigital.com
+    copyright &copy; ComércioDigital.com
     </footer>
 </body>
 </html>
