--- a/lucas/1templates-L/cadastro.html
+++ b/lucas/1templates-L/cadastro.html
@@ -8,7 +8,7 @@
     <title>cadastro</title>
 </head>
 <body>
-    <img class="semfundo" src="/lucas/img-L/semfundo.png" alt="">
+    <img class="semfundo" src="/lucas/img-L/logo_cadastro.png" alt="">
     <form action="#" method="post" class="formlogin">
         <fieldset>
            <h1>Crie sua conta</h1>
@@ -31,5 +31,8 @@
            <a href="#"><input type="submit" value="continuar" class="btm"></a>
         </fieldset>
 </form>
+    <footer class="fixarRodape">
+    copyright &copy; ComércioDigital.com
+    </footer>
 </body>
 </html>
