--- a/lucas/1templates-L/index.html
+++ b/lucas/1templates-L/index.html
@@ -30,7 +30,7 @@
           <li><a href="cadastro.html">cadastro</a></li>
           <li><a href="login.html">login</a></li>
           <li><a href="#">Ofertas do Dia</a></li>
-          <li><a href="#">Mais Vendidos</a></li>
+          <li><a href="Afiliados.html">Afiliados</a></li>
         </ul>
       </div>
     </nav>
@@ -58,59 +58,60 @@
 
   <div class="slideshow-container">
     <div class="slideshow-slide">
-      <img src="/lucas/img-L/suplementos com.png" alt="Slide 1">
+      <img src="/lucas/img-L/airpods slide.png" alt="Slide 1">
     </div>
     <div class="slideshow-slide">
-      <img src="/lucas/img-L/moderninha com.png" alt="Slide 2">
+      <img src="/lucas/img-L/Smart Watch Smartband M7 Relógio Inteligente Android Ios slide.png" alt="Slide 2">
     </div>
     <div class="slideshow-slide">
-      <img src="/lucas/img-L/smartwatchh.png" alt="Slide 3">
+      <img src="/lucas/img-L/stanley slider.png" alt="Slide 3">
     </div>
   </div>
   <center>
-    <h2>👾 Relógio Smartwatch e fones 👾</h2>
+    <h2>👾 Mais Vendidos 👾</h2>
   </center>
   <div class="container-4">
     <div class="anuncio-blocos">
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
-        <h3>Fone de</h3>
-        <p class="preco">R$ 39,99</p>
+        <img src="/lucas/img-L/produtos/airpods pro 3.png" alt="Nome do produto">
+        <h3>AirPods Pro 2023 3 Geracão - Réplicapremium</h3>
+        <p class="preco">R$ 239,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
-        <h3>Relógio Smartwatch Android Ios Inteligente D20 Bluetooth</h3>
-        <p class="preco">R$ 39,99</p>
+        <img src="/lucas/img-L/produtos/Smart Watch Smartband M7.png" alt="Nome do produto">
+        <h3>Smart Watch Smartband M7 Relógio Inteligente Android Ios
+        </h3>
+        <p class="preco">R$ 69,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
+        <img src="/lucas/img-L/produtos/smartwatchd20.jpg" alt="Nome do produto">
         <h3>Relógio Smartwatch Android Ios Inteligente D20 Bluetooth</h3>
-        <p class="preco">R$ 39,99</p>
+        <p class="preco">R$ 49,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
-        <h3>Relógio Smartwatch Android Ios Inteligente D20 Bluetooth</h3>
-        <p class="preco">R$ 39,99</p>
+        <img src="/lucas/img-L/produtos/garrafater.png" alt="Nome do produto">
+        <h3>Garrafa Térmica Termômetro Display Led 500 ML Cor:Branco</h3>
+        <p class="preco">R$ 69,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
-        <h3>Relógio Smartwatch Android Ios Inteligente D20 Bluetooth</h3>
-        <p class="preco">R$ 39,99</p>
+        <img src="/lucas/img-L/produtos/fones.png" alt="Nome do produto">
+        <h3>Fone De Ouvido Carro S/fio Bluetooth 5.0 S109 Envio Imediato</h3>
+        <p class="preco">R$ 20,50</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
-        <img src="/lucas/img-L/41eyG2VOkVL.__AC_SX300_SY300_QL70_ML2_.jpg" alt="Nome do produto">
-        <h3>Relógio Smartwatch Android Ios Inteligente D20 Bluetooth</h3>
-        <p class="preco">R$ 39,99</p>
+        <img src="/lucas/img-L/produtos/smartband (1).jpg" alt="Nome do produto">
+        <h3>Relógio De Pulso Digital Com LED M4 Esportivo A prova água feminino masculino</h3>
+        <p class="preco">R$ 19,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
