--- a/lucas/1templates-L/index.html
+++ b/lucas/1templates-L/index.html
@@ -172,7 +172,7 @@
   </div>
 
   <center>
-    <h2>👾 Roupas 👾</h2>
+    <h2>👾 Roupas 2 👾</h2>
   </center>
   <div class="container-4-2">
     <div class="anuncio-blocos">
