--- a/lucas/1templates-L/index.html
+++ b/lucas/1templates-L/index.html
@@ -32,28 +32,35 @@
         <ul>
           <li><a href="cadastro.html">cadastro</a></li>
           <li><a href="login.html">login</a></li>
-          <li><a href="https://www.instagram.com/comerciodigitalbrasil/" target="_blank" >instagram</a></li>
+          <li><a href="https://www.instagram.com/comerciodigitalbrasil/" target="_blank">instagram</a></li>
           <li><a href="Afiliados.html">Afiliados</a></li>
         </ul>
       </div>
     </nav>
   </header>
 
-        <div>
-          <button class="bntcar"><i class="fa-solid fa-cart-plus fa-shake"></i></button>
-        </div>
-        <div>
-          <button class="logincliente"><i class="fa-solid fa-user"></i></button>
-        </div>
+  <div>
 
-  <head>
-    <nav class="menu-color">
-      <div class="menu-2">
-        <H3 style="font-weight: 500;">Comércio Digital Brasil</H3>
-
+      <button class="bntcar"><i class="fa-solid fa-cart-plus fa-shake"></i></button>
+    </div>
+    <div id="carrinho" class="carrinho" style="display: none;">
+      <div id="carrinho-header" class="carrinho-header">
+        <h3>Itens no Carrinho</h3>
       </div>
-    </nav>
-  </head>
+      <ul id="lista-carrinho">
+        <!-- Itens serão adicionados aqui dinamicamente -->
+      </ul>
+      <button id="fechar-carrinho">Fechar</button>
+    </div>
+  <div>
+    <button class="logincliente"><i class="fa-solid fa-user"></i></button>
+  </div>
+
+  <nav class="menu-color">
+    <div class="menu-2">
+      <h3 style="font-weight: 500;">Comércio Digital Brasil</h3>
+    </div>
+  </nav>
 
   <div class="slideshow-container">
     <div class="slideshow-slide">
@@ -69,7 +76,6 @@
   <center>
     <hr style="border: 0.5px solid #0000002a;">
     <h2>👾 Mais Vendidos 👾</h2>
-
   </center>
   <div class="container-4">
     <div class="anuncio-blocos">
@@ -123,54 +129,47 @@
   <center>
     <hr style="border: 0.5px solid #0000002a;">
     <h2>👾 Roupas 👾</h2>
-
   </center>
   <div class="container-4-2">
     <div class="anuncio-blocos">
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/41BauTo6uzL._AC_SX679_.jpg" class="suple" alt="Nome do produto">
-        <h3>Blusa Moletom Casaco Jordan Preto Unissex Tamanho:P;Cor:Preto
-        </h3>
+        <h3>Blusa Moletom Casaco Jordan Preto Unissex Tamanho:P;Cor:Preto</h3>
         <p class="preco">R$100,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/51jdjDv4ZEL.__AC_SY445_SX342_QL70_ML2_.jpg" class="suple" alt="Nome do produto">
-        <h3>Blusa de Frio Moletom Cordão Neon Capuz Bolso Canguru Macio Relaxado
-        </h3>
+        <h3>Blusa de Frio Moletom Cordão Neon Capuz Bolso Canguru Macio Relaxado</h3>
         <p class="preco">R$119,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/51-QeDJjfXL._AC_SX679_.jpg" class="suple" alt="Nome do produto">
-        <h3>Moletom masculino com capuz fashion Trends Hip Hop Patchwork Suéter com capuz
-        </h3>
+        <h3>Moletom masculino com capuz fashion Trends Hip Hop Patchwork Suéter com capuz</h3>
         <p class="preco">R$155,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/61nrMv5qHSL.__AC_SY445_SX342_QL70_ML2_.jpg" class="suple" alt="Nome do produto">
-        <h3>Moletom com capuz casual de manga comprida com capuz Color Block
-        </h3>
+        <h3>Moletom com capuz casual de manga comprida com capuz Color Block</h3>
         <p class="preco">R$219,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/61DVwMmbZNL.__AC_SY445_SX342_QL70_ML2_.jpg" class="suple" alt="Nome do produto">
-        <h3>Moletom casual masculino feminino com capuz e zíper frontal
-        </h3>
+        <h3>Moletom casual masculino feminino com capuz e zíper frontal</h3>
         <p class="preco">R$169,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
       </div>
       <div class="anuncio">
         <img src="https://m.media-amazon.com/images/I/51uiOnZKDeL._AC_SX522_.jpg" class="suple" alt="Nome do produto">
-        <h3>Moletom Canguru Graffiti Sad Smile
-        </h3>
+        <h3>Moletom Canguru Graffiti Sad Smile</h3>
         <p class="preco">R$169,99</p>
         <a href="#" class="botao-adicionar">Adicionar ao carrinho</a>
         <a href="#" class="botao-comprar">Comprar</a>
@@ -183,7 +182,6 @@
   <center>
     <hr style="border: 0.5px solid #0000002a;">
     <h2>👾 Suplementos 👾</h2>
-
   </center>
   <div class="container-4-1">
     <div class="anuncio-blocos">
@@ -236,25 +234,23 @@
 
   <footer>
     <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-around;">
-        <div class="contato">
-            <h3 style="color: #fff; font-weight: 500;">Contato</h3>
-            <p>📞 (85) 99999-9999</p>
-            <p>✉ contato@lojavirtual.com</p>
-        </div>
-        
-        <div>
-            <h3 style="color: #fff; font-weight: 500;">Receba Promoções</h3>
-            <form>
-                <input type="email" placeholder="Digite seu e-mail" required style="padding: 8px; width: 200px; border-radius: 5px; border: none;">
-                <button type="submit" style="padding: 8px; background-color: #dbff22; border: none; cursor: pointer; border-radius: 5px;">Inscrever-se</button>
-            </form>
-        </div>
+      <div class="contato">
+        <h3 style="color: #fff; font-weight: 500;">Contato</h3>
+        <p>📞 (85) 99999-9999</p>
+        <p>✉ contato@lojavirtual.com</p>
+      </div>
+      <div>
+        <h3 style="color: #fff; font-weight: 500;">Receba Promoções</h3>
+        <form>
+          <input type="email" placeholder="Digite seu e-mail" required style="padding: 8px; width: 200px; border-radius: 5px; border: none;">
+          <button type="submit" style="padding: 8px; background-color: #dbff22; border: none; cursor: pointer; border-radius: 5px;">Inscrever-se</button>
+        </form>
+      </div>
     </div>
-
     <hr style="border: 1px solid rgba(255, 255, 255, 0.336); margin-top: 20px;">
-    <p style="margin-top: 20px; font-size: 14px;">&copy; 2025 Loja Virtual. Todos os direitos reservados.</p>
-</footer>
- 
+    <p style="margin-top: 20px; font-size: 14px;">© 2025 Loja Virtual. Todos os direitos reservados.</p>
+  </footer>
+
   <script src="/lucas/jscript/scripts.js"></script>
 </body>
 
