criação de um setor de endereços_alpha

--- a/lucas/1templates-L/checkout-pages/checkout.html
+++ b/lucas/1templates-L/checkout-pages/checkout.html
@@ -29,7 +29,7 @@
 
     <div class="checkout-wrapper">
         <div class="checkout-content">
-            <h2 class="checkout-title">Carrinho (<?php echo count($cart); ?>)</h2>
+            <h2 class="checkout-title">Carrinho (0)</h2>
             <div class="cart-section">
                 <div class="cart-items">
                     <ul id="checkout-list" class="checkout-list"></ul>
